add config elasticCluster

--- a/src/main/resources/defconfig/defconfig.properties
+++ b/src/main/resources/defconfig/defconfig.properties
@@ -1,4 +1,5 @@
-elasticHost=192.168.22.68
+elasticCluster=elasticsearch
+elasticHost=127.0.0.1
 elasticPort=9300
 elasticIndex=rocket
 elasticType=original
